--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "logdown": "^3.3.1",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
+    "notistack": "^1.0.4",
     "polished": "^4.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
