--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Coordinape",
+  "name": "YFI-Coordinape",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "svgs/logo/logo.svg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/svg"
     },
     {
-      "src": "logo192.png",
+      "src": "imgs/logo/logo232.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "232x232"
     },
     {
-      "src": "logo512.png",
+      "src": "imgs/logo/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
