initial prototype graph of force directed graph

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "async-sema": "^3.1.0",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "d3-force-3d": "^2.2.0",
     "ethers": "^5.0.26",
     "history": "^5.0.0",
     "i18next": "^19.8.4",
@@ -36,6 +37,7 @@
     "polished": "^4.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-force-graph-2d": "^1.19.1",
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
