--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 REACT_APP_INFURA_PROJECT_ID=
 REACT_APP_FORTMATIC_API_KEY=
 REACT_APP_PORTIS_DAPP_ID=
+REACT_APP_API_BASE_URL=
+REACT_APP_AWS_S3_BUCKET=
+REACT_APP_AWS_ACCESS_KEY=
+REACT_APP_AWS_SECRET_KEY=
