--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-virtualized-auto-sizer": "^1.0.5",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
@@ -93,6 +94,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.168",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
