--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
+  "resolutions": {
+    "canvas-color-tracker": "file:./canvas-color-tracker"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
