--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ethersproject/units": "^5.0.9",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -41,6 +42,7 @@
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-string-replace": "^0.4.4",
     "react-virtualized-auto-sizer": "^1.0.5",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.1.3",
