--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "1.x",
     "@ethersproject/providers": "^5.0.19",
     "@ethersproject/units": "^5.0.9",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -25,6 +27,7 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "d3-force-3d": "^2.2.0",
+    "date-fns": "^2.21.1",
     "ethers": "^5.0.26",
     "history": "^5.0.0",
     "i18next": "^19.8.4",
@@ -37,6 +40,7 @@
     "notistack": "^1.0.4",
     "polished": "^4.0.5",
     "react": "^17.0.1",
+    "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.1",
     "react-force-graph-2d": "^1.19.1",
     "react-i18next": "^11.8.5",
@@ -45,6 +49,7 @@
     "react-string-replace": "^0.4.4",
     "react-virtualized-auto-sizer": "^1.0.5",
     "source-map-explorer": "^2.5.2",
+    "styled-components": "^5.2.3",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
