--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format:staged": "lint-staged",
+    "lint": "eslint",
     "lint:check": "eslint \"./src/**/*.{js,ts,tsx}\"",
     "lint:fix": "yarn lint:check --fix",
     "prettier": "prettier './src/**/*.{js,ts,tsx}'",
@@ -114,7 +115,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
