--- a/.eslintrc
+++ b/.eslintrc
@@ -43,6 +43,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/ban-ts-ignore": "off",
     "react/prop-types": "off",
     "no-console": [
       "warn",
@@ -84,7 +85,7 @@
           },
           {
             "group": "parent",
-            "pattern": "{assets,assets/**,icons,icons/**,components,components/**,config,config/**,contexts,contexts/**,layouts,layouts/**,pages,pages/**,routes,routes/**,services,services/**,styles,styles/**,theme,theme/**,utils,utils/**}"
+            "pattern": "{assets,assets/**,icons,icons/**,components,components/**,config,config/**,contexts,contexts/**,layouts,layouts/**,pages,pages/**,routes,routes/**,recoilState,recoilState/**,services,services/**,styles,styles/**,theme,theme/**,utils,utils/**,hooks,hooks/**}"
           },
           {
             "group": "object",
