--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.0.22",
+    "itiriri": "^2.0.1",
     "lodash": "^4.17.20",
     "logdown": "^3.3.1",
     "moment": "^2.29.1",
