hotfix - profile data

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-show-more": "^2.0.3",
     "@web3-react/core": "^6.1.1",
     "@web3-react/fortmatic-connector": "^6.1.6",
     "@web3-react/injected-connector": "^6.0.7",
@@ -47,6 +48,7 @@
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-show-more": "^2.0.0",
     "react-string-replace": "^0.4.4",
     "react-virtualized-auto-sizer": "^1.0.5",
     "recoil": "^0.3.1",
