--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "source-map-explorer": "^2.5.2",
     "styled-components": "^5.2.3",
     "typescript": "^4.1.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "zod": "^3.7.1"
   },
   "resolutions": {
     "canvas-color-tracker": "file:./canvas-color-tracker"
