--- a/.eslintrc
+++ b/.eslintrc
@@ -109,6 +109,7 @@
     "react-hooks/exhaustive-deps": "off",
     "no-empty-function": "off",
     "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/no-static-element-interactions": "off",
+    "react/react-in-jsx-scope": "off"
   }
 }
