respond to Lawrence

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
+STAGING_REACT_APP_API_BASE_URL=https://myvault.live/api
+REACT_APP_API_BASE_URL=https://coordinape.me/api
+REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
 REACT_APP_INFURA_PROJECT_ID=
 REACT_APP_FORTMATIC_API_KEY=
 REACT_APP_PORTIS_DAPP_ID=
-REACT_APP_API_BASE_URL=
-REACT_APP_S3_BASE_URL=
