--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.3.0",
     "@date-io/luxon": "1.x",
     "@ethersproject/providers": "^5.0.19",
     "@ethersproject/units": "^5.0.9",
@@ -51,7 +52,7 @@
     "react-force-graph-2d": "^1.19.1",
     "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "next",
     "react-show-more": "^2.0.0",
     "react-string-replace": "^0.4.4",
     "react-virtualized-auto-sizer": "^1.0.5",
@@ -66,12 +67,12 @@
     "canvas-color-tracker": "file:./canvas-color-tracker"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:local": "react-scripts  --max_old_space_size=4096 build",
-    "build:gzip": "react-scripts build && gzipper --verbose ./build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
+    "build:local": "craco  --max_old_space_size=4096 build",
+    "build:gzip": "craco build && gzipper --verbose ./build",
+    "test": "craco test",
+    "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
     "lint:check": "eslint \"./src/**/*.{js,ts,tsx}\"",
@@ -120,18 +121,25 @@
     "@types/recoilize": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
-    "eslint": "^7.18.0",
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "http-browserify": "^1.7.0",
+    "https-browserify": "^1.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
+    "os-browserify": "^0.3.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4"
   }
 }
