--- a/package.json
+++ b/package.json
@@ -3,65 +3,64 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.3.0",
+    "@craco/craco": "6.3.0",
     "@date-io/luxon": "1.x",
-    "@ethersproject/providers": "^5.0.19",
-    "@ethersproject/units": "^5.0.9",
-    "@hcaptcha/react-hcaptcha": "^0.3.7",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/pickers": "^3.3.10",
+    "@ethersproject/providers": "5.0.23",
+    "@ethersproject/units": "5.0.10",
+    "@hcaptcha/react-hcaptcha": "0.3.7",
+    "@material-ui/core": "4.11.3",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.58",
+    "@material-ui/pickers": "3.3.10",
     "@sentry/integrations": "^6.13.3",
-    "@sentry/react": "^6.9.0",
-    "@sentry/tracing": "^6.9.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-show-more": "^2.0.3",
-    "@web3-react/core": "^6.1.1",
-    "@web3-react/fortmatic-connector": "^6.1.6",
-    "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/portis-connector": "^6.1.6",
-    "@web3-react/walletconnect-connector": "^6.2.4",
-    "@web3-react/walletlink-connector": "^6.1.6",
-    "async-sema": "^3.1.0",
-    "axios": "^0.21.1",
-    "clsx": "^1.1.1",
-    "d3-force-3d": "^2.2.0",
-    "ethers": "^5.0.26",
-    "history": "^5.0.0",
-    "i18next": "^19.8.4",
-    "i18next-browser-languagedetector": "^6.0.1",
-    "i18next-http-backend": "^1.0.22",
-    "itiriri": "^2.0.1",
-    "lodash": "^4.17.20",
-    "logdown": "^3.3.1",
-    "luxon": "^2.0.2",
-    "moment": "^2.29.1",
-    "node-sass": "^6.0.1",
-    "notistack": "^1.0.4",
-    "polished": "^4.0.5",
-    "react": "^17.0.1",
-    "react-data-table-component": "^6.11.7",
-    "react-dom": "^17.0.1",
-    "react-force-graph-2d": "^1.19.1",
-    "react-i18next": "^11.8.5",
-    "react-router-dom": "^5.2.0",
+    "@sentry/react": "6.9.0",
+    "@sentry/tracing": "6.9.0",
+    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.5",
+    "@testing-library/user-event": "12.7.1",
+    "@types/jest": "26.0.20",
+    "@types/node": "12.20.1",
+    "@types/react": "16.14.4",
+    "@types/react-dom": "16.9.11",
+    "@types/react-show-more": "2.0.3",
+    "@web3-react/core": "6.1.1",
+    "@web3-react/fortmatic-connector": "6.1.6",
+    "@web3-react/injected-connector": "6.0.7",
+    "@web3-react/portis-connector": "6.1.6",
+    "@web3-react/walletconnect-connector": "6.2.4",
+    "@web3-react/walletlink-connector": "6.1.6",
+    "async-sema": "3.1.0",
+    "axios": "0.21.1",
+    "clsx": "1.1.1",
+    "d3-force-3d": "2.3.2",
+    "ethers": "5.0.31",
+    "history": "5.0.0",
+    "i18next": "19.8.9",
+    "i18next-browser-languagedetector": "6.0.1",
+    "i18next-http-backend": "1.1.0",
+    "itiriri": "2.0.1",
+    "lodash": "4.17.20",
+    "logdown": "3.3.1",
+    "luxon": "2.0.2",
+    "moment": "2.29.1",
+    "node-sass": "6.0.1",
+    "notistack": "1.0.4",
+    "polished": "4.1.1",
+    "react": "17.0.1",
+    "react-data-table-component": "6.11.7",
+    "react-dom": "17.0.1",
+    "react-force-graph-2d": "1.22.1",
+    "react-i18next": "11.8.7",
+    "react-router-dom": "5.2.0",
     "react-scripts": "next",
-    "react-show-more": "^2.0.0",
-    "react-string-replace": "^0.4.4",
-    "react-virtualized-auto-sizer": "^1.0.5",
-    "recoil": "^0.4.1",
-    "source-map-explorer": "^2.5.2",
-    "styled-components": "^5.2.3",
-    "typescript": "^4.1.3",
-    "web-vitals": "^1.1.0",
-    "zod": "^3.7.1"
+    "react-show-more": "2.0.0",
+    "react-string-replace": "0.4.4",
+    "react-virtualized-auto-sizer": "1.0.5",
+    "recoil": "0.4.1",
+    "source-map-explorer": "2.5.2",
+    "styled-components": "5.2.3",
+    "web-vitals": "1.1.0",
+    "zod": "3.7.1"
   },
   "resolutions": {
     "canvas-color-tracker": "file:./canvas-color-tracker"
@@ -114,32 +113,33 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.168",
-    "@types/luxon": "^2.0.2",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "@types/recoilize": "^0.8.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "assert": "^2.0.0",
-    "crypto-browserify": "^3.12.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "http-browserify": "^1.7.0",
-    "https-browserify": "^1.0.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "os-browserify": "^0.3.0",
-    "prettier": "^2.2.1",
-    "prettier-eslint": "^12.0.0",
-    "prettier-eslint-cli": "^5.0.0",
-    "pretty-quick": "^3.1.0",
-    "stream-browserify": "^3.0.0",
-    "util": "^0.12.4"
+    "@types/lodash": "4.14.168",
+    "@types/luxon": "2.0.2",
+    "@types/react-router-dom": "5.1.7",
+    "@types/react-virtualized-auto-sizer": "1.0.0",
+    "@types/recoilize": "0.8.0",
+    "@typescript-eslint/eslint-plugin": "4.15.1",
+    "@typescript-eslint/parser": "4.15.1",
+    "assert": "2.0.0",
+    "crypto-browserify": "3.12.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "http-browserify": "1.7.0",
+    "https-browserify": "1.0.0",
+    "husky": "4.3.8",
+    "lint-staged": "10.5.4",
+    "os-browserify": "0.3.0",
+    "prettier": "2.2.1",
+    "prettier-eslint": "12.0.0",
+    "prettier-eslint-cli": "5.0.0",
+    "pretty-quick": "3.1.0",
+    "stream-browserify": "3.0.0",
+    "typescript": "4.1.5",
+    "util": "0.12.4"
   }
 }
