--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@craco/craco": "6.3.0",
     "@date-io/luxon": "1.x",
-    "@ethersproject/providers": "5.0.23",
-    "@ethersproject/units": "5.0.10",
+    "@ethersproject/providers": "5.4.5",
+    "@ethersproject/units": "5.4.0",
     "@hcaptcha/react-hcaptcha": "0.3.7",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
@@ -16,14 +16,14 @@
     "@sentry/react": "6.9.0",
     "@sentry/tracing": "6.9.0",
     "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.5",
+    "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "12.7.1",
     "@types/jest": "26.0.20",
     "@types/node": "12.20.1",
-    "@types/react": "16.14.4",
-    "@types/react-dom": "16.9.11",
+    "@types/react": "17.0.27",
+    "@types/react-dom": "17.0.9",
     "@types/react-show-more": "2.0.3",
-    "@web3-react/core": "6.1.1",
+    "@web3-react/core": "6.1.9",
     "@web3-react/fortmatic-connector": "6.1.6",
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/portis-connector": "6.1.6",
@@ -33,7 +33,7 @@
     "axios": "0.21.1",
     "clsx": "1.1.1",
     "d3-force-3d": "2.3.2",
-    "ethers": "5.0.31",
+    "ethers": "5.4.7",
     "history": "5.0.0",
     "i18next": "19.8.9",
     "i18next-browser-languagedetector": "6.0.1",
@@ -118,15 +118,15 @@
     "@types/react-router-dom": "5.1.7",
     "@types/react-virtualized-auto-sizer": "1.0.0",
     "@types/recoilize": "0.8.0",
-    "@typescript-eslint/eslint-plugin": "4.15.1",
-    "@typescript-eslint/parser": "4.15.1",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "assert": "2.0.0",
     "crypto-browserify": "3.12.0",
     "eslint": "7.32.0",
-    "eslint-config-prettier": "7.2.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-import-resolver-typescript": "2.5.0",
+    "eslint-plugin-import": "2.24.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "http-browserify": "1.7.0",
@@ -134,12 +134,10 @@
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "os-browserify": "0.3.0",
-    "prettier": "2.2.1",
-    "prettier-eslint": "12.0.0",
-    "prettier-eslint-cli": "5.0.0",
-    "pretty-quick": "3.1.0",
+    "prettier": "2.4.1",
+    "pretty-quick": "3.1.1",
     "stream-browserify": "3.0.0",
-    "typescript": "4.1.5",
+    "typescript": "4.4.3",
     "util": "0.12.4"
   }
 }
