Implement Github Action for Typechecking, Linting and Testing
Makes it easy for contributors to debug what's wrong with the build without needing to be added to the Vercel team

Runs on PRs and on any changes to master

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "prettier": "prettier './src/**/*.{js,ts,tsx}'",
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
+    "typecheck": "tsc --noEmit",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "lint-staged": {
