--- a/.eslintrc
+++ b/.eslintrc
@@ -69,6 +69,7 @@
       "always"
     ],
     "no-warning-comments": "off",
+    "@typescript-eslint/no-unused-vars": ["error"],
     "import/extensions": 0,
     "import/no-unresolved": 0,
     "import/no-extraneous-dependencies": [
