--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,8 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:jsx-a11y/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "prettier"
   ],
   "env": {
     "es6": true,
@@ -39,11 +40,6 @@
     "browser": true
   },
   "rules": {
-    // For https://github.com/prettier/eslint-plugin-prettier
-    "prettier/prettier": "error",
-    "arrow-body-style": "off",
-    "prefer-arrow-callback": "off",
-    // End required rules for eslint-plugin-prettier
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
