Update react-script to v5 alpha for Webpack 5 support (#200)
* Update react-script to v5 alpha for webpack 5 support

Craco used to polyfill node APIs that webpack 5 doesn't polyfill out of the box anymore. Webpack 5 needed to address
bundler bugs with Ceramic libraries.

Test Plan: ensure project still builds and runs without errors

* Pin all dependencies to exact versions

Non-exact versions cause more headaches than solutions. To keep these updated its best to setup dependabot on github instead.

* Update a bunch of dependencies + fix eslint config

Updated the eslint config to modern standards (separate prettier from eslint flow) and fixed type/linting errors
introduced with new dependency versions

* Fix module resolution for ESM files

* Fix duplicate export and update yarn.lock

* Reformat old files with new version of prettier

* dont warn on missing source map

* eslintrc set arrow-parens to as-needed

* Move arrowParens rule from ESLint to prettier

Co-authored-by: Alex Warren <exrhizo@gmail.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,12 +4,10 @@
       "pragma": "React",
       "version": "detect"
     },
-    "import/extensions": [
-      ".js",
-      ".jsx",
-      ".ts",
-      ".tsx"
-    ]
+    "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    }
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -24,18 +22,16 @@
     "react-hooks",
     "@typescript-eslint",
     "import",
-    "jsx-a11y",
-    "prettier"
+    "jsx-a11y"
   ],
   "extends": [
     "eslint:recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:import/recommended",
     "plugin:jsx-a11y/recommended",
-    "plugin:prettier/recommended",
-    "prettier/react"
+    "prettier"
   ],
   "env": {
     "es6": true,
@@ -43,12 +39,6 @@
     "browser": true
   },
   "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
@@ -58,16 +48,10 @@
     "no-console": [
       "warn",
       {
-        "allow": [
-          "warn",
-          "error"
-        ]
+        "allow": ["warn", "error"]
       }
     ],
-    "semi": [
-      "error",
-      "always"
-    ],
+    "semi": ["error", "always"],
     "no-warning-comments": "off",
     "@typescript-eslint/no-unused-vars": ["error"],
     "import/extensions": 0,
@@ -87,10 +71,7 @@
           "external",
           "internal",
           "parent",
-          [
-            "sibling",
-            "index"
-          ]
+          ["sibling", "index"]
         ],
         // define material-ui group that will appear separately after other main externals
         "pathGroups": [
@@ -124,12 +105,7 @@
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".js",
-          ".jsx",
-          ".ts",
-          ".tsx"
-        ]
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     ],
     "react-hooks/rules-of-hooks": "error",
