--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/lab": "4.0.0-alpha.58",
     "@material-ui/pickers": "3.3.10",
     "@sentry/integrations": "6.13.3",
+    "@self.id/core": "0.1.0",
     "@sentry/react": "6.9.0",
     "@sentry/tracing": "6.9.0",
     "@testing-library/jest-dom": "5.11.9",
@@ -113,6 +114,9 @@
     ]
   },
   "devDependencies": {
+    "@datamodels/identity-accounts-web": "0.1.2",
+    "@datamodels/identity-profile-basic": "0.1.2",
+    "@glazed/types": "0.1.3",
     "@types/lodash": "4.14.168",
     "@types/luxon": "2.0.2",
     "@types/react-router-dom": "5.1.7",
