Fix errors while running Jest

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.58",
     "@material-ui/pickers": "3.3.10",
-    "@sentry/integrations": "6.13.3",
     "@self.id/core": "0.1.0",
+    "@sentry/integrations": "6.13.3",
     "@sentry/react": "6.9.0",
     "@sentry/tracing": "6.9.0",
     "@testing-library/jest-dom": "5.11.9",
@@ -53,7 +53,7 @@
     "react-force-graph-2d": "1.23.8",
     "react-i18next": "11.8.7",
     "react-router-dom": "5.2.0",
-    "react-scripts": "next",
+    "react-scripts": "5.0.0-next.47",
     "react-show-more": "2.0.0",
     "react-string-replace": "0.4.4",
     "react-virtualized-auto-sizer": "1.0.5",
