--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
   },
   "devDependencies": {
     "@datamodels/identity-accounts-web": "0.1.2",
+    "@datamodels/identity-accounts-crypto": "0.1.2",
     "@datamodels/identity-profile-basic": "0.1.2",
     "@glazed/types": "0.1.3",
     "@types/lodash": "4.14.168",
