--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "0.21.2",
     "clsx": "1.1.1",
     "d3-force-3d": "2.3.2",
+    "ethereumjs-util": "^7.1.3",
     "ethers": "5.4.7",
     "history": "5.0.0",
     "i18next": "19.8.9",
