--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "build": "craco build",
     "build:local": "craco  --max_old_space_size=4096 build",
     "build:gzip": "craco build && gzipper --verbose ./build",
+    "hardhat:build": "yarn --cwd hardhat build",
+    "hardhat:dev": "yarn --cwd hardhat dev",
     "test": "craco test",
     "eject": "craco eject",
     "format:staged": "lint-staged",
