--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
 REACT_APP_INFURA_PROJECT_ID=
-REACT_APP_FORTMATIC_API_KEY=
-REACT_APP_PORTIS_DAPP_ID=
 
 # production backend
 #REACT_APP_API_BASE_URL=https://coordinape.me/api
+
+# staging backend
+#REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
 
 # localhost backend
 REACT_APP_API_BASE_URL=http://localhost/api
