--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -11,7 +11,10 @@
     "@openzeppelin/contracts": "^4.3.2",
     "@typechain/ethers-v5": "^7.0.0",
     "@typechain/hardhat": "^2.0.0",
+    "@types/chai": "^4.2.22",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^15.0.3",
+    "chai": "^4.3.4",
     "ethers": "^5.4.6",
     "hardhat": "^2.4.1",
     "hardhat-deploy": "^0.9.0",
