fix: add apeRouter tests

--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "build:gzip": "craco build && gzipper --verbose ./build",
     "hardhat:build": "yarn --cwd hardhat build",
     "hardhat:dev": "yarn --cwd hardhat dev",
-    "test": "craco test",
+    "hardhat:test": "yarn --cwd hardhat test",
+    "test": "yarn hardhat:test && craco test",
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
