--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -4,10 +4,12 @@
   "license": "MIT",
   "scripts": {
     "build": "hardhat clean && hardhat compile",
-    "dev": "hardhat node"
+    "dev": "hardhat node",
+    "test": "hardhat test"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.2",
     "@typechain/ethers-v5": "^7.0.0",
     "@typechain/hardhat": "^2.0.0",
@@ -15,6 +17,8 @@
     "@types/mocha": "^9.0.0",
     "@types/node": "^15.0.3",
     "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
+    "ethereum-waffle": "^3.0.0",
     "ethers": "^5.4.6",
     "hardhat": "^2.4.1",
     "hardhat-deploy": "^0.9.0",
