--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "coordinape-contracts",
-  "version": "1.0.0",
-  "license": "MIT",
+  "private": true,
   "scripts": {
     "build": "hardhat clean && hardhat compile",
     "dev": "hardhat node",
