--- a/package.json
+++ b/package.json
@@ -75,9 +75,8 @@
     "hardhat:dev": "yarn --cwd hardhat dev",
     "hardhat:install": "yarn --cwd hardhat install",
     "hardhat:test": "yarn --cwd hardhat test",
-    "hardhat:test:ci": "git submodule update && yarn hardhat:install && yarn hardhat:build && yarn hardhat:test",
     "test": "craco test",
-    "test:ci": "CI=1 craco test && yarn hardhat:test:ci",
+    "test:ci": "CI=1 craco test && yarn hardhat:test",
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
