--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,11 +29,9 @@ jobs:
           key: nodeModules-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
       - run: yarn --frozen-lockfile
-
       - run: yarn typecheck
-
       - run: yarn lint:check
-
       - run: yarn prettier:check
-
+      - run: git submodule update --init --recursive
+      - run: yarn hardhat:install
       - run: yarn test:ci
