don't use a separate .env file

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ REACT_APP_INFURA_PROJECT_ID=
 
 # localhost backend
 REACT_APP_API_BASE_URL=http://localhost/api
+
+# for Hardhat
+ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/YOUR_KEY
