--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,5 +33,5 @@ jobs:
       - run: yarn lint:check
       - run: yarn prettier:check
       - run: git submodule update --init --recursive
-      - run: yarn hardhat:install
+      - run: yarn hardhat:install --frozen-lockfile
       - run: yarn test:ci
