--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,11 @@ jobs:
           path: '**/node_modules'
           key: nodeModules-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
+      - uses: actions/cache@v2
+        with:
+          path: '**/hardhat/node_modules'
+          key: hardhatNodeModules-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
       - run: yarn --frozen-lockfile
       - run: yarn typecheck
       - run: yarn lint:check
