--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,4 +39,5 @@ jobs:
       - run: yarn prettier:check
       - run: git submodule update --init --recursive
       - run: yarn hardhat:install --frozen-lockfile
+      - run: yarn hardhat:build
       - run: yarn test:ci
