feat: add hardhat support (#230)
* feat: add hardhat support

* feat: add hardhat readme

* fix: remove circle contracts

* use a git submodule for contract code

* add `git submodule update` step to README

* feat: add tests for apeVault (#248)

* feat: add tests for apeVault

* fix: add apeRouter tests

* add yarn hardhat:install

* disable failing tests

* revert change to timeout

* no need for chai.use

hardhat-waffle takes care of this

Co-authored-by: Lawrence Wang <l@lw.io>

* try running hardhat tests in Github Actions

* check in typechain types

I'm not 100% sure these should be checked in--open to debate about it--but at the moment it does work around an issue in Github Actions with the submodule not being loaded

* add steps to workflow

* don't use a separate .env file

* add --frozen-lockfile to hardhat yarn install

* Delete .env.example

* remove typechain types

CI needs to regenerate them anyway it seems

* re-add typechain to .gitignore

* cache hardhat/node_modules

* fix key for hardhat node_modules cache

* add build step

Co-authored-by: Lawrence Wang <l@lw.io>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,7 @@ jobs:
       CI: true
       REACT_APP_S3_BASE_URL: https://coordinape.s3.amazonaws.com
       REACT_APP_API_BASE_URL: https://myvault.live/api
+      ETHEREUM_RPC_URL: ${{ secrets.ETHEREUM_RPC_URL }}
 
     steps:
       - uses: actions/checkout@v2
@@ -27,12 +28,16 @@ jobs:
           path: '**/node_modules'
           key: nodeModules-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
+      - uses: actions/cache@v2
+        with:
+          path: '**/hardhat/node_modules'
+          key: hardhatNodeModules-${{ runner.os }}-${{ hashFiles('**/hardhat/yarn.lock') }}
+
       - run: yarn --frozen-lockfile
-
       - run: yarn typecheck
-
       - run: yarn lint:check
-
       - run: yarn prettier:check
-
-      - run: yarn test
+      - run: git submodule update --init --recursive
+      - run: yarn hardhat:install --frozen-lockfile
+      - run: yarn hardhat:build
+      - run: yarn test:ci
