--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
 /.scannerwork
 .eslintcache
+
+# hardhat
+hardhat/artifacts/
+hardhat/cache/
+hardhat/deployments/
+hardhat/typechain/
 
 # testing
 /coverage
