--- a/package.json
+++ b/package.json
@@ -71,7 +71,12 @@
     "build": "craco build",
     "build:local": "craco  --max_old_space_size=4096 build",
     "build:gzip": "craco build && gzipper --verbose ./build",
+    "hardhat:build": "yarn --cwd hardhat build",
+    "hardhat:dev": "yarn --cwd hardhat dev",
+    "hardhat:install": "yarn --cwd hardhat install",
+    "hardhat:test": "yarn --cwd hardhat test",
     "test": "craco test",
+    "test:ci": "CI=1 craco test && yarn hardhat:test",
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
