--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "recoil": "0.4.1",
     "source-map-explorer": "2.5.2",
     "styled-components": "5.2.3",
+    "true-myth": "^4.1.1",
     "web-vitals": "1.1.0",
     "zod": "3.7.1"
   },
