--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.58",
     "@material-ui/pickers": "3.3.10",
+    "@self.id/core": "0.1.0",
     "@sentry/integrations": "6.14.1",
     "@sentry/react": "6.14.1",
     "@sentry/tracing": "6.14.1",
@@ -53,7 +54,7 @@
     "react-force-graph-2d": "1.23.8",
     "react-i18next": "11.8.7",
     "react-router-dom": "5.2.0",
-    "react-scripts": "next",
+    "react-scripts": "5.0.0-next.47",
     "react-show-more": "2.0.0",
     "react-string-replace": "0.4.4",
     "react-virtualized-auto-sizer": "1.0.5",
@@ -119,6 +120,10 @@
     ]
   },
   "devDependencies": {
+    "@datamodels/identity-accounts-web": "0.1.2",
+    "@datamodels/identity-accounts-crypto": "0.1.2",
+    "@datamodels/identity-profile-basic": "0.1.2",
+    "@glazed/types": "0.1.3",
     "@types/lodash": "4.14.168",
     "@types/luxon": "2.0.2",
     "@types/react-router-dom": "5.1.7",
