--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     ]
   },
   "devDependencies": {
+    "@types/debug": "^4.1.7",
     "@types/lodash": "4.14.168",
     "@types/luxon": "2.0.2",
     "@types/react-router-dom": "5.1.7",
