--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,6 +37,7 @@ jobs:
       - run: git submodule update --init --recursive
       - run: yarn hardhat:install --frozen-lockfile
       - run: yarn hardhat:build
+      - run: ./scripts/setup-hardhat-link.sh
       - run: yarn typecheck
       - run: yarn lint:check
       - run: yarn prettier:check
