feat: create lightweight deploymentInfo for dapp

--- a/hardhat/tsconfig.json
+++ b/hardhat/tsconfig.json
@@ -18,7 +18,7 @@
     "node_modules"
   ],
   "include": [
-    "./deployments/**/*.json",
+    "./deploymentInfo.json",
     "./scripts"
   ],
   "files": [
