--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.58",
     "@material-ui/pickers": "3.3.10",
+    "@prisma/client": "3.4.2",
     "@self.id/core": "0.1.0",
     "@sentry/integrations": "6.14.1",
     "@sentry/react": "6.14.1",
@@ -121,8 +122,8 @@
     ]
   },
   "devDependencies": {
-    "@datamodels/identity-accounts-web": "0.1.2",
     "@datamodels/identity-accounts-crypto": "0.1.2",
+    "@datamodels/identity-accounts-web": "0.1.2",
     "@datamodels/identity-profile-basic": "0.1.2",
     "@glazed/types": "0.1.3",
     "@types/debug": "^4.1.7",
@@ -150,6 +151,7 @@
     "os-browserify": "0.3.0",
     "prettier": "2.4.1",
     "pretty-quick": "3.1.1",
+    "prisma": "3.4.2",
     "stream-browserify": "3.0.0",
     "typescript": "4.4.3",
     "util": "0.12.4"
