add DATABASE_URL to .env.example

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ REACT_APP_API_BASE_URL=http://localhost/api
 
 # for Hardhat
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/YOUR_KEY
+
+# for Prisma
+DATABASE_URL=postgres://username:password@localhost:5432/dbname
