--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -9,6 +9,7 @@
     "mint": "ts-node scripts/mint.ts",
     "codegen": "ts-node scripts/generate-deployment-info.ts",
     "dev": "ganache-cli -l 8000000 --networkId 1576478390085 --deterministic --hostname=0.0.0.0 -m 'coordinape' --fork $ETHEREUM_RPC_URL",
+    "deploy": "hardhat deploy --network localhost",
     "test": "hardhat test"
   },
   "files": [
