--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.58",
     "@material-ui/pickers": "3.3.10",
-    "@prisma/client": "3.4.2",
+    "@prisma/client": "^3.4.2",
     "@self.id/core": "0.1.0",
     "@sentry/integrations": "6.14.1",
     "@sentry/react": "6.14.1",
@@ -63,6 +63,7 @@
     "recoil": "0.4.1",
     "source-map-explorer": "2.5.2",
     "styled-components": "5.2.3",
+    "ts-node": "^10.4.0",
     "web-vitals": "1.1.0",
     "zod": "3.7.1"
   },
