feat: add hasura authorization webhook
- update to read from header instead of body of request

- respond with X-Hasura payload if token is found
- respond with 401 if token is invalid

--- a/package.json
+++ b/package.json
@@ -83,9 +83,9 @@
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
-    "lint:check": "eslint \"./src/**/*.{js,ts,tsx}\"",
+    "lint:check": "eslint \"{api,src}/**/*.{js,ts,tsx}\"",
     "lint:fix": "yarn lint:check --fix",
-    "prettier": "prettier \"./src/**/*.{js,ts,tsx}\"",
+    "prettier": "prettier \"{api,src}/**/*.{js,ts,tsx}\"",
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
     "typecheck": "tsc --noEmit",
