--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,6 +30,7 @@ jobs:
       - run: yarn --frozen-lockfile
       - run: git submodule update --init --recursive
       - run: yarn hardhat:install --frozen-lockfile
+      - run: yarn hardhat:compile
       - run: yarn hardhat:build
       - run: ./scripts/setup-hardhat-link.sh
       - run: yarn typecheck
