--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,11 +28,7 @@ jobs:
           key: hardhatNodeModules-${{ runner.os }}-${{ hashFiles('**/hardhat/yarn.lock') }}
 
       - run: yarn --frozen-lockfile
-      - run: git submodule update --init --recursive
-      - run: yarn hardhat:install --frozen-lockfile
-      - run: yarn hardhat:compile
-      - run: yarn hardhat:build
-      - run: ./scripts/setup-hardhat-link.sh
+      - run: ./scripts/setup-hardhat.sh
       - run: yarn typecheck
       - run: yarn lint:check
       - run: yarn prettier:check
