Fixes header and sort text that used 'Give' instead of custom token name #342 (#344)
Authored-by: CryptoGraffe

* Fixes header and sort text that used 'Give' instead of custom token name
* Pinning version number of ts-auto-mocks

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "recoil": "0.4.1",
     "source-map-explorer": "2.5.2",
     "styled-components": "5.2.3",
+    "ts-auto-mock": "3.5.0",
     "web-vitals": "1.1.0",
     "zod": "3.7.1"
   },
