--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@types/debug": "4.1.7",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "27.0.3",
     "@types/lodash": "4.14.168",
     "@types/luxon": "2.0.2",
     "@types/node": "16.11.11",
@@ -134,11 +134,12 @@
     "https-browserify": "1.0.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
+    "next": "12.0.7",
     "os-browserify": "0.3.0",
     "prettier": "2.4.1",
     "pretty-quick": "3.1.1",
     "prisma": "3.4.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0-next.47",
     "stream-browserify": "3.0.0",
     "ts-auto-mock": "3.5.0",
     "typescript": "4.4.3",
