--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "axios": "0.21.2",
     "clsx": "1.1.1",
     "d3-force-3d": "2.3.2",
-    "ethereumjs-util": "^7.1.3",
+    "ethereumjs-util": "7.1.3",
     "ethers": "5.5.1",
     "history": "5.0.0",
     "itiriri": "2.0.1",
@@ -108,7 +108,7 @@
     "@glazed/types": "0.1.3",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.2",
-    "@types/debug": "^4.1.7",
+    "@types/debug": "4.1.7",
     "@types/jest": "26.0.20",
     "@types/lodash": "4.14.168",
     "@types/luxon": "2.0.2",
