--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/YOUR_KEY
 
 # for Prisma
 DATABASE_URL=postgres://username:password@localhost:5432/dbname
+
+# for graphql
+HASURA_URL=https://coordinape-staging.hasura.app/v1/graphql
+HASURA_ADMIN_SECRET=secret
