--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@craco/craco": "6.3.0",
     "@date-io/luxon": "1.x",
+    "@gqty/react": "^2.1.0",
     "@hcaptcha/react-hcaptcha": "0.3.7",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
@@ -29,6 +30,8 @@
     "d3-force-3d": "2.3.2",
     "ethereumjs-util": "7.1.3",
     "ethers": "5.5.1",
+    "gqty": "^2.1.0",
+    "graphql": "^16.0.1",
     "history": "5.0.0",
     "itiriri": "2.0.1",
     "lodash": "4.17.21",
@@ -106,6 +109,7 @@
     "@datamodels/identity-accounts-web": "0.1.2",
     "@datamodels/identity-profile-basic": "0.1.2",
     "@glazed/types": "0.1.3",
+    "@gqty/cli": "^2.3.1",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.2",
     "@types/debug": "4.1.7",
