make HASURA_URL accessible in browser

--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,5 @@ ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/YOUR_KEY
 DATABASE_URL=postgres://username:password@localhost:5432/dbname
 
 # for graphql
-HASURA_URL=https://coordinape-staging.hasura.app/v1/graphql
+REACT_APP_HASURA_URL=https://coordinape-staging.hasura.app/v1/graphql
 HASURA_ADMIN_SECRET=secret
