--- a/hardhat/tsconfig.json
+++ b/hardhat/tsconfig.json
@@ -13,15 +13,11 @@
       "./scripts"
     ],
   },
-  "exclude": [
-    "dist",
-    "node_modules"
-  ],
   "include": [
-    "./deploymentInfo.json",
-    "./scripts"
+    "./typechain"
   ],
   "files": [
-    "./hardhat.config.ts"
+    "./hardhat.config.ts",
+    "./deploymentInfo.json",
   ]
 }
