Update README with guide on setting up local Hasura instance

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,10 @@ REACT_APP_INFURA_PROJECT_ID=
 #REACT_APP_API_BASE_URL=https://coordinape.me/api
 
 # staging backend
-REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
+#REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
 
 # localhost backend
-#REACT_APP_API_BASE_URL=http://localhost/api
+REACT_APP_API_BASE_URL=http://localhost/api
 
 # for Hardhat
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/YOUR_KEY
